--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 		<!--Футер-->
 		<footer class="footer">
 			<div class="general-container container">
-				<div>
+				<div class="left-container">
 					<a href="./index.html" class="logo white">
 						<span lang="en" class="first-part">Web</span>Studio</a
 					>
@@ -428,7 +428,7 @@
 					</address>
 				</div>
 				<div class="right-container">
-					<p class="social-text">присоединяйтесь</p>
+					<h3 class="social-text">присоединяйтесь</h3>
 					<ul class="social-list list">
 						<li class="social-item">
 							<a href="" class="social-link bg-footer">
