--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
 				<div class="block-porfolio container">
 					<ul class="btn-list-portfolio list">
 						<li class="style-btn">
-							<button class="btn-portfolio" type="button">Все</button>
+							<button class="btn-portfolio style-btn" type="button">Все</button>
 						</li>
 						<li class="style-btn">
 							<button class="btn-portfolio style-btn" type="button">Веб-сайты</button>
@@ -92,90 +92,123 @@
 					<h1 class="visually-hidden">Примеры проектов</h1>
 					<ul class="block-example-portfolio list">
 						<li class="example-portfolio-list">
-							<img src="./images-project/project1.jpg" width="370" height="294" alt="Технокряк" />
-							<div class="example-block-text">
-								<h2 class="example-portfolio-title">Технокряк</h2>
-								<p class="example-portfolio-text">Веб-сайт</p>
-							</div>
+							<a href="" class="link-portfolio link">
+								<img src="./images-project/project1.jpg" width="370" height="294" alt="Технокряк" />
+								<div class="example-block-text">
+									<h2 class="example-portfolio-title">Технокряк</h2>
+									<p class="example-portfolio-text">Веб-сайт</p>
+								</div>
+							</a>
 						</li>
 						<li class="example-portfolio-list">
-							<img src="./images-project/project2.jpg" width="370" height="294" alt="Постер" />
-							<div class="example-block-text">
-								<h2 class="example-portfolio-title">
-									Постер <span lang="en">New Orlean vs Golden Star</span>
-								</h2>
-								<p class="example-portfolio-text">Дизайн</p>
-							</div>
+							<a href="" class="link-portfolio link">
+								<img src="./images-project/project2.jpg" width="370" height="294" alt="Постер" />
+								<div class="example-block-text">
+									<h2 class="example-portfolio-title">
+										Постер <span lang="en">New Orlean vs Golden Star</span>
+									</h2>
+									<p class="example-portfolio-text">Дизайн</p>
+								</div>
+							</a>
 						</li>
 						<li class="example-portfolio-list">
-							<img src="./images-project/project3.jpg" width="370" height="294" alt="Ресторан" />
-							<div class="example-block-text">
-								<h2 class="example-portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
-								<p class="example-portfolio-text">Приложение</p>
-							</div>
+							<a href="" class="link-portfolio link">
+								<img src="./images-project/project3.jpg" width="370" height="294" alt="Ресторан" />
+								<div class="example-block-text">
+									<h2 class="example-portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
+									<p class="example-portfolio-text">Приложение</p>
+								</div>
+							</a>
 						</li>
 						<li class="example-portfolio-list">
-							<img
-								src="./images-project/project4.jpg"
-								width="370"
-								height="294"
-								alt="Проект Prime"
-							/>
-							<div class="example-block-text">
-								<h2 class="example-portfolio-title">Проект <span lang="en">Prime</span></h2>
-								<p class="example-portfolio-text">Маркетинг</p>
-							</div>
+							<a href="" class="link-portfolio link">
+								<img
+									src="./images-project/project4.jpg"
+									width="370"
+									height="294"
+									alt="Проект Prime"
+								/>
+
+								<div class="example-block-text">
+									<h2 class="example-portfolio-title">Проект <span lang="en">Prime</span></h2>
+									<p class="example-portfolio-text">Маркетинг</p>
+								</div>
+							</a>
 						</li>
 						<li class="example-portfolio-list">
-							<img
-								src="./images-project/project5.jpg"
-								width="370"
-								height="294"
-								alt="Проект Boxes"
-							/>
-							<div class="example-block-text">
-								<h2 class="example-portfolio-title">Проект <span lang="en">Boxes</span></h2>
-								<p class="example-portfolio-text">Приложение</p>
-							</div>
+							<a href="" class="link-portfolio link">
+								<img
+									src="./images-project/project5.jpg"
+									width="370"
+									height="294"
+									alt="Проект Boxes"
+								/>
+
+								<div class="example-block-text">
+									<h2 class="example-portfolio-title">Проект <span lang="en">Boxes</span></h2>
+									<p class="example-portfolio-text">Приложение</p>
+								</div>
+							</a>
 						</li>
 						<li class="example-portfolio-list">
-							<img src="./images-project/project6.jpg" width="370" height="294" alt="Inspiration" />
-							<div class="example-block-text">
-								<h2 class="example-portfolio-title">
-									<span lang="en">Inspiration has no Borders</span>
-								</h2>
-								<p class="example-portfolio-text">Веб-сайт</p>
-							</div>
+							<a href="" class="link-portfolio link">
+								<img
+									src="./images-project/project6.jpg"
+									width="370"
+									height="294"
+									alt="Inspiration"
+								/>
+								<div class="example-block-text">
+									<h2 class="example-portfolio-title">
+										<span lang="en">Inspiration has no Borders</span>
+									</h2>
+
+									<p class="example-portfolio-text">Веб-сайт</p>
+								</div>
+							</a>
 						</li>
 						<li class="example-portfolio-list">
-							<img src="./images-project/project7.jpg" width="370" height="294" alt="Издание" />
-							<div class="example-block-text">
-								<h2 class="example-portfolio-title">
-									Издание <span lang="en"> Limited Edition</span>
-								</h2>
-								<p class="example-portfolio-text">Дизайн</p>
-							</div>
+							<a href="" class="link-portfolio link">
+								<img src="./images-project/project7.jpg" width="370" height="294" alt="Издание" />
+								<div class="example-block-text">
+									<h2 class="example-portfolio-title">
+										Издание <span lang="en"> Limited Edition</span>
+									</h2>
+
+									<p class="example-portfolio-text">Дизайн</p>
+								</div>
+							</a>
 						</li>
 						<li class="example-portfolio-list">
-							<img src="./images-project/project8.jpg" width="370" height="294" alt="Проект LAB" />
-							<div class="example-block-text">
-								<h2 class="example-portfolio-title">Проект <span lang="en">LAB</span></h2>
-								<p class="example-portfolio-text">Маркетинг</p>
-							</div>
+							<a href="" class="link-portfolio link">
+								<img
+									src="./images-project/project8.jpg"
+									width="370"
+									height="294"
+									alt="Проект LAB"
+								/>
+								<div class="example-block-text">
+									<h2 class="example-portfolio-title">Проект <span lang="en">LAB</span></h2>
+									<p class="example-portfolio-text">Маркетинг</p>
+								</div>
+							</a>
 						</li>
 						<li class="example-portfolio-list">
-							<img
-								src="./images-project/project9.jpg"
-								width="370"
-								height="294"
-								alt="Growing Business"
-							/>
-							<div class="example-block-text">
-								<h2 class="example-portfolio-title">
-									<span lang="en">Growing Business</span>
-								</h2>
-								<p class="example-portfolio-text">Приложение</p>
-							</div>
+							<a href="" class="link-portfolio link">
+								<img
+									src="./images-project/project9.jpg"
+									width="370"
+									height="294"
+									alt="Growing Business"
+								/>
+
+								<div class="example-block-text">
+									<h2 class="example-portfolio-title">
+										<span lang="en">Growing Business</span>
+									</h2>
+									<p class="example-portfolio-text">Приложение</p>
+								</div>
+							</a>
 						</li>
 					</ul>
 				</div>
@@ -184,7 +217,7 @@
 		<!--Футер-->
 		<footer class="footer">
 			<div class="general-container container">
-				<div>
+				<div class="left-container">
 					<a href="./index.html" class="logo white">
 						<span lang="en" class="first-part">Web</span>Studio</a
 					>
@@ -214,7 +247,7 @@
 					</address>
 				</div>
 				<div class="right-container">
-					<p class="social-text">присоединяйтесь</p>
+					<h3 class="social-text">присоединяйтесь</h3>
 					<ul class="social-list list">
 						<li class="social-item">
 							<a href="" class="social-link bg-footer">
